--- a/TestingGrounds/App.config
+++ b/TestingGrounds/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="RateBinding">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="RateBinding1" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="https://wwwcie.ups.com/webservices/Rate" binding="basicHttpBinding"
+                bindingConfiguration="RateBinding" contract="RateService.RatePortType"
+                name="RatePort" />
+        </client>
+    </system.serviceModel>
 </configuration>
